class UserId():
    def __init__(self, value: str):
        self.id = value
